@@ -8,7 +8,7 @@ As of version 0.1.1, missing time values are set with ratios 3,4,5; see L<Schedu
 
 =head2 Attributes
 
-Attributes of the form C<attribute=E<gt>{attribute=E<gt>value,...}> should be available in all activity/action nodes (and messages when added, see below).  Attributes will be returned from C<buildSchedule> in the C<attribute> key of the result as a hash of C<attribute name=E<gt>{total=E<gt>value,xy=E<gt>[[seconds,total],...]}>.  Attribute totals may then be used by the caller to trigger rebuilds.  Eventually, node filters should support conditional logic predicated on the current attribute values during the build, such as C<next> node look-ahead filtering (with fallback).  Based on the nature of filtering, a nodal change at a given time may induce a rebuild of all following times (or the entire containing activity).
+As of version 0.1.1, attributes are available in activity/action configurations and reported with C<buildSchedule>.  Future versions may support node filters, ie conditional logic predicated on the current attribute values during the build, such as C<next> node look-ahead filtering (with fallback).  Based on the nature of filtering, a nodal change at a given time may induce a rebuild of all following times (or the entire containing activity).
 
 =head2 Multimessage support
 
@@ -20,7 +20,7 @@ If possible, support loading of configuration from a Markdown-styled nested list
 
 =head2 Convenience, min/max/valid reporting functions
 
-More complex schedules may be difficult to interpret at a glance.  One particular annoyance is finding that the target time for an activity cannot be reached, or that there are too many actions to fit a smaller goal window.  Recommend some convenience functions to find the minimum possible activity time (shortest path through the nodes, ultimately), if the activity can be completed at all (sorta easy to forget, and should be checked before attempting scheduling), and the maximum possible activity time (if defined).
+More complex schedules may be difficult to interpret at a glance.  One particular annoyance is finding that the target time for an activity cannot be reached, or that there are too many actions to fit a smaller goal window.  Recommend some convenience functions to find the minimum possible activity time (shortest path through the nodes, ultimately), if the activity can be completed at all (sorta easy to forget, and should be checked before attempting scheduling), and the maximum possible activity time (if defined).  Moreover, these checks are needed to avoid hanging nodes (that don't reach finish), or action nodes with zero times (that never make progress).
 
 =head2 Tension
 
@@ -66,7 +66,7 @@ Third, scheduling of paired events is not straightforward.  An example would be 
 
 =head2 Object interface
 
-Move C<Schedule::Activity> from class functions to an object interface.
+Move C<Schedule::Activity> from static functions to an object interface.
 
 =head2 Pre-scheduling validation
 
