@@ -7,7 +7,7 @@ use Scalar::Util qw/looks_like_number/;
 
 our $VERSION='0.1.0';
 
-my %property=map {$_=>undef} qw/tmmin tmavg tmmax next finish message attribute note/;
+my %property=map {$_=>undef} qw/tmmin tmavg tmmax next finish message attribute note attributes/;
 
 my %defaults=(
 	'tmmax/tmavg'=>5/4,
